
2022-07-15  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: no module name check (done in libcob now)

2022-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: added -dumpversion (called from libcob)

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: include libcob headers relative and tarstamp.h early

2021-05-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use double-dash for long options

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (cobcrun_print_version, cobcrun_print_usage): msgid change
	  moving URLs to parameter per gettext-guidelines
	* cobcrun.c: removed unused includes

2020-12-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (cobcrun_LDADD): fixed ordering, in-tree libraries
	  must be specified first

2020-10-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: when in verbose mode additionally ask libcob for
	  version summary, showing library details

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: defaults.h removed
	* Makefile.am: removed passing COB_EXPORT_DYN to LD_FLAGS

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed inclusion of libsupport, now libtoolized
	* cobcrun.c: include gettext without lib prefix
	* cobcrun.c: use EXIT_SUCCESS and EXIT_FAILURE instead of exit(0/1)

2020-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: include PROGRAMS_LIBS

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (process_command_line) [_WIN32]: simplified code;
	  only convert from /opt to -opt if POSIXLY_CORRECT is not set;
	  added conversion from /? to --help

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	Bug #616 cannot redirect output of cobcrun --info
	FR #385 more details for screenio in cobcrun --info
	* cobcrun.c: added verbose option, passed to (print_info_detailed)

2020-05-07  Simon Sobisch <simonsobisch@gnu.org>

	* cob-config.in: extended with an actual help
	* cob-config.1: now auto-generated like cobcrun.1